--- a/css/maps.css
+++ b/css/maps.css
@@ -10,21 +10,26 @@
 
 #info-content {
     z-index: -1;
-    /* display:none; */
+
 }
 
 /* Optional: Makes the sample page fill the window. */
 table {
     font-size: 12px;
+        /* hide the scrollbar */
+  overflow:hidden;
 }
 
 #gresults {
     
 }
 
-#gphoto {
+#photo {
     width: 100%;
-    height: 317px;
+    height: 314px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
 }
 
 #map {
